--- a/cloudSystemFront/src/app/login/login.component.html
+++ b/cloudSystemFront/src/app/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<section class="containerGeneral">
+    <div class="containerLogin">
+        <img src="../../assets/images/logoferre2.png" alt="image-logo">
+        
+        <form [formGroup]="loginForm" (ngSubmit)="stateLogin()">
+            <div class="containerData">
+                <label for="username">*Usuario </label>
+                <input type="text" id="username" formControlName="username" required>
+            </div>
+            <div class="containerData">
+                <label for="password">*Contraseña </label>
+                <input type="password" id="password" formControlName="password" required>
+            </div>
+            <button class="btnLogin" type="submit" [disabled]="loginForm.invalid">Iniciar Sesión</button>
+        </form>
+    </div>
+</section>
