--- a/cloudSystemFront/src/libs/shared/header/header.component.html
+++ b/cloudSystemFront/src/libs/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="headerContainer">
     <img src="../../assets/images/logoferre2.png" alt="image-logo">
-    <div class="infoUser">
+    <div class="infoUser" (click)="returnLogin()">
         <img src="../../assets/images/user.png" alt="image-user">
         <span>UserTest</span>
     </div>
